[package]
name = "light_contract_storage"
version = "0.1.0"
edition = "2021"

[dependencies]

reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", features = ["client"], commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43"}
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43"}
reth-trie = { git = "https://github.com/paradigmxyz/reth", commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43"}
reth-db = { git = "https://github.com/paradigmxyz/reth", commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", commit = "7ae8ce1d0096a32211cda406c1f1176cfc217b43" }

alloy-rlp = "0.3.4"
alloy-rpc-types = "0.6.0"
alloy-trie = { version = "0.7.3", default-features = false }
alloy-rpc-types-eth = "0.6.0"
alloy-json-rpc = "0.6.0"
alloy-primitives = { version = "0.8.11", default-features = false, features = ["asm-keccak"] }

jsonrpsee = "0.24.6"

eth-sparse-mpt = { path = "../eth-sparse-mpt" }

tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
dotenv = "0.15"
lazy_static = "1.5.0"
rand = "0.8.5"
itertools = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = { version = "1.3.3" }

async-trait = "0.1.83"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'